--- a/me/Layout/MainLayout.razor
+++ b/me/Layout/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <FluentLayout>
     <FluentHeader>
-        Gabriël J. M. Wolmarans
+        GJM Wolmarans
     </FluentHeader>
     <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">
         <NavMenu />
@@ -20,6 +20,6 @@
         </FluentBodyContent>
     </FluentStack>
     <FluentFooter>
-        <FluentTextBlock>© @(DateTime.UtcNow.Year) - Gabriël J. M. Wolmarans</FluentTextBlock>
+        <FluentTextBlock>© @(DateTime.UtcNow.Year) - GJM Wolmarans</FluentTextBlock>
     </FluentFooter>
 </FluentLayout>
