--- a/me/Pages/AboutMe.razor
+++ b/me/Pages/AboutMe.razor
@@ -1,9 +1,29 @@
 ﻿@page "/"
 
-<PageTitle>Gabriël Wolmarans</PageTitle>
+@inject IExcelFileService ExcelFileService
+
+<PageTitle>GJM Wolmarans</PageTitle>
 
 <h1>Hello, world!</h1>
 
 <h2>Competency Matrix</h2>
 
 <iframe width="1154" height="642" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=F9480B74B852B3B7%21251307&authkey=%21ALWOWl3ShAlVT70&em=2&wdAllowInteractivity=False&Item=ClusterExperience&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=false&ed1JS=false"></iframe>
+
+@code {
+    ICollection<Resource> Resources { get; set; } = new List<Resource>();
+
+    protected async override Task OnInitializedAsync()
+    {
+        await base.OnInitializedAsync();
+    }
+
+    protected async override Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            Resources = await ExcelFileService.GetResourcesAsync();
+            Console.WriteLine(Resources.Count);
+        }
+    }
+}
