Got the Resource List component to Load data from JSON file

--- a/me/App.razor
+++ b/me/App.razor
@@ -20,10 +20,7 @@
 
         if (firstRender)
         {
-            await ExcelFileService.GetProvidersAsync();
-            await ExcelFileService.GetResourcesAsync();
-            await ExcelFileService.GetTagsAsync();
-            await ExcelFileService.GetResourceTagsAsync();
+            await ExcelFileService.LoadData();
         }       
     }
 }
