--- a/me/Layout/MainLayout.razor
+++ b/me/Layout/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <FluentLayout>
     <FluentHeader>
-        GJM Wolmarans
+        Gabriël J. M. Wolmarans (1991*)
     </FluentHeader>
     <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">
         <NavMenu />
@@ -20,6 +20,6 @@
         </FluentBodyContent>
     </FluentStack>
     <FluentFooter>
-        <FluentTextBlock>© @(DateTime.UtcNow.Year) - GJM Wolmarans</FluentTextBlock>
+        <span>© @(DateTime.UtcNow.Year) - Gabriël J. M. Wolmarans</span>
     </FluentFooter>
 </FluentLayout>
