--- a/me/Pages/AboutMe.razor
+++ b/me/Pages/AboutMe.razor
@@ -1,9 +1,10 @@
 ﻿@page "/"
 @using me.shared
+@using me.Pages.Learning
 
 @inject IExcelFileService ExcelFileService
 
-<PageTitle>GJM Wolmarans</PageTitle>
+<PageTitle>Gabriël J. M. Wolmarans</PageTitle>
 
 <h1>Hello, world!</h1>
 
@@ -11,8 +12,9 @@
 
 <iframe width="1154" height="642" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=F9480B74B852B3B7%21251307&authkey=%21ALWOWl3ShAlVT70&em=2&wdAllowInteractivity=False&Item=ClusterExperience&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=false&ed1JS=false"></iframe>
 
+<ResourceList />
+
 @code {
-    ICollection<Resource> Resources { get; set; } = new List<Resource>();
     Data Data { get; set; } 
 
     protected async override Task OnInitializedAsync()
@@ -24,8 +26,8 @@
     {
         if (firstRender)
         {
-            Data = await ExcelFileService.LoadData();
-            Console.WriteLine(Data.Resources.ToList().Count);
+            Data = await ExcelFileService.LoadData(); 
+            Console.WriteLine(Data.Resources.Count());
         }
     }
 }
