--- a/me/_Imports.razor
+++ b/me/_Imports.razor
@@ -8,4 +8,6 @@
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Microsoft.JSInterop
 @using me
+@using me.shared
 @using me.Layout
+@using me.Components.Resource
