--- a/me/Pages/AboutMe.razor
+++ b/me/Pages/AboutMe.razor
@@ -1,12 +1,13 @@
 ﻿@page "/"
-@using me.shared
-@using me.Pages.Learning
 
 @inject IExcelFileService ExcelFileService
 
-<PageTitle>Gabriël J. M. Wolmarans</PageTitle>
+<PageTitle>gjmwolmarans.me | About Me</PageTitle>
 
-<h1>Hello, world!</h1>
+<FluentStack Orientation="Orientation.Vertical">
+    <h1>Hello, world!</h1>
+    <p></p>
+</FluentStack>
 
 <h2>Competency Matrix</h2>
 
@@ -27,7 +28,7 @@
         if (firstRender)
         {
             Data = await ExcelFileService.LoadData(); 
-            Console.WriteLine(Data.Resources.Count());
+            Console.WriteLine($"Resources ({Data.Resources.Count()})");
         }
     }
 }
