--- a/me/Layout/MainLayout.razor
+++ b/me/Layout/MainLayout.razor
@@ -20,6 +20,6 @@
         </FluentBodyContent>
     </FluentStack>
     <FluentFooter>
-        <span>© @(DateTime.UtcNow.Year) - Gabriël J. M. Wolmarans</span>
+        <span>Gabriël J. M. Wolmarans - © @(DateTime.UtcNow.Year) All Rights Reserved.</span>
     </FluentFooter>
 </FluentLayout>
