Add ResourceTypes and update UI components
- Added `ResourceTypes` property to `Data` class in `Data.cs` and marked it with `[JsonIgnore]`.
- Introduced `ResourceType` class in `ResourceType.cs` with properties `Title`, `Resources`, `IsHighlighted`, and `WeightedExperience`.
- Updated `ResourceList.razor` to adjust the width of the `SfListView` component.
- Added `ResourceTypeList.razor` component for displaying and managing resource types with selection and event handling.
- Modified `XPCounter.razor` to wrap `SfCard` in a `div` with 100% width.
- Updated `AboutMe.razor` to include `ResourceTypeList` and adjust grid item sizes. Enhanced `FilteredResources` to filter by tags and resource types.
- Updated `ExcelFileService` to populate `Data.ResourceTypes` and associate resources with their types.
- Removed unnecessary folder references from `me.csproj`.
- Updated `index.html` to include new stylesheet `me.styles.css` and made minor formatting changes.

--- a/me/Components/Resource/ResourceList.razor
+++ b/me/Components/Resource/ResourceList.razor
@@ -12,6 +12,7 @@
     <h3>Resources</h3>
     <SfListView DataSource="@Items.OrderByDescending(x => x.Id)"
         CssClass="e-list-template"
+        Width="95vw"
         SortOrder="Syncfusion.Blazor.Lists.SortOrder.Ascending">
         <ListViewFieldSettings TValue="Resource" Id="@nameof(Resource.Id)" Text="@nameof(Resource.Title)">
         </ListViewFieldSettings>
